@@ -177,11 +177,9 @@ BAT *BATunique(BAT *b, BAT *s);
 BBPrec *BBP[N_BBPINIT];
 void BBPaddfarm(const char *dirname, int rolemask);
 void BBPclear(bat bid);
-void BBPcold(bat b);
 int BBPcurstamp(void);
 int BBPdecref(bat b, int logical);
 BAT *BBPdescriptor(bat b);
-void BBPhot(bat b);
 int BBPin;
 int BBPincref(bat b, int logical);
 bat BBPindex(const char *nme);
